fix text alignment properly

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   background: #b1acad;
 }
 .letter {
+  letter-spacing: 0.5px;
   display: none;
   background: repeating-linear-gradient(
     to bottom,
@@ -41,7 +42,7 @@ body {
     #d2d2d2 28px
   );
   color: #333;
-  padding: 30px 25px; /* 🔥 KIRI JANGAN 70px */
+  padding: 30px 25px;
   border-radius: 10px;
 
   width: 90%;
@@ -54,13 +55,14 @@ body {
   overflow-x: hidden;
 
   font-size: 1rem;
-  line-height: 1.8; /* 🔥 INI PENTING */
-  text-align: left; /* 🔥 WAJIB */
+  line-height: 1.8;
+  text-align: left;
 
   position: relative;
 }
 
 .letter p {
+  text-align: left;
   margin-top: 10px 0;
 }
 .letter::before {
